cv-layout: fixed z-index of icons to make the depht of the parallax more believeable. z index range of the parallax is -90 to -60 (range of 30)

--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -11,4 +11,6 @@
   justify-content: center;
   align-items: center;
 
+  z-index: -100;
+
 }
